--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="col-md-3">
                                 <div class="product-card product-card-poster">
                                     <div class="product-image-container"><img
-                                            src="https://static.wikia.nocookie.net/doblaje/images/8/83/Mortal_Kombat_1.jpg/revision/latest?cb=20230611162105&path-prefix=es"
+                                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk9vQfyvONH8J_sXznhrw9A67EAZ136yID-oRKHVj09x2S2OWpjXhzxl5Q-kBcAClHD1o&usqp=CAU"
                                             class="card-img-top" alt="Mortal Kombat 1"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">Mortal Kombat 1</h5>
@@ -407,4 +407,5 @@
 </body>
 
 </html>
+
 
