--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="col-md-3">
                                 <div class="product-card product-card-poster">
                                     <div class="product-image-container"><img
-                                            src="https://tse4.mm.bing.net/th/id/OIP.pU4wanz4ERSN7PqbPHNkegHaLH?cb=thfvnext&w=500&h=750&rs=1&pid=ImgDetMain&o=7&rm=3"
+                                            src="https://blizzstoreperu.com/cdn/shop/products/EGS_MarvelsSpiderManRemastered_InsomniacGamesNixxesSoftware_S2_1200x1600-76424286902489f4d9639ac9b735c2b2.jpg?v=1671732172"
                                             class="card-img-top" alt="Mortal Kombat 1"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">Mortal Kombat 1</h5>
@@ -407,6 +407,7 @@
 </body>
 
 </html>
+
 
 
 
