--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <div class="product-card product-card-poster">
+                                    <div class="product-image-container"><img
+                                            src="https://static.wikia.nocookie.net/mkwikia/images/4/41/MK1_%282023%29_Cover_Art.jpeg/revision/latest/scale-to-width-down/1200?cb=20230804010326"
+                                            class="card-img-top" alt="Mortal Kombat 1"></div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">Mortal Kombat 1</h5>
+                                        <div class="price-container"><span class="price-final">S/ 229.90</span></div><a
+                                            href="#" class="btn btn-primary w-100 mt-2">Comprar</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
