--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="col-md-3">
                                 <div class="product-card product-card-poster">
                                     <div class="product-image-container"><img
-                                            src="https://static.wikia.nocookie.net/mkwikia/images/4/41/MK1_%282023%29_Cover_Art.jpeg/revision/latest/scale-to-width-down/1200?cb=20230804010326"
+                                            src="https://i.imgflip.com/8g6g3s.jpg"
                                             class="card-img-top" alt="Mortal Kombat 1"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">Mortal Kombat 1</h5>
@@ -407,6 +407,7 @@
 </body>
 
 </html>
+
 
 
 
