--- a/ayuda.html
+++ b/ayuda.html
@@ -132,9 +132,69 @@
         </section>
     </main>
 
-    <footer class="bg-dark text-white text-center p-4 mt-5 border-top border-secondary">
+   <footer class="site-footer mt-5">
         <div class="container">
-            <p>&copy; 2025 - GameNexus. Todos los derechos reservados.</p>
+            <div class="row pt-5 pb-4">
+                <!-- Columna 1: Contacto -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>CONTACTO GAMENEXUS</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><i class="bi bi-geo-alt-fill me-2"></i>Avenida Digital 123, Lima, Perú</li>
+                        <li class="mb-2"><i class="bi bi-telephone-fill me-2"></i>+51 987 654 321</li>
+                        <li class="mb-2"><i class="bi bi-envelope-fill me-2"></i>soporte@gamenexus.com</li>
+                    </ul>
+                    <div class="social-icons mt-3">
+                        <a href="#" class="social-icon"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="social-icon"><i class="bi bi-twitter-x"></i></a>
+                        <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="bi bi-twitch"></i></a>
+                    </div>
+                </div>
+
+                <!-- Columna 2: Información -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>INFORMACIÓN</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#">Acerca de Nosotros</a></li>
+                        <li><a href="#">Cómo Comprar</a></li>
+                        <li><a href="#">Políticas de Privacidad</a></li>
+                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="ayuda.html">Contáctanos</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Mi Cuenta -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>MI CUENTA</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#">Mi Cuenta</a></li>
+                        <li><a href="#">Historial de Órdenes</a></li>
+                        <li><a href="#">Lista de Deseos</a></li>
+                        <li><a href="#">Reembolsos</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 4: Boletín -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>BOLETÍN INFORMATIVO</h5>
+                    <p>Suscríbete y sé el primero en recibir nuestras ofertas exclusivas y noticias.</p>
+                    <form class="newsletter-form">
+                        <input type="email" class="form-control" placeholder="Ingresa tu correo aquí...">
+                        <button type="submit" class="btn btn-danger mt-2 w-100">SUSCRÍBETE</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+                <p class="mb-3 mb-md-0">&copy; 2025 - GameNexus. Desarrollado con ❤️.</p>
+                <div class="payment-icons">
+                    <img src="https://img.icons8.com/color/48/000000/visa.png" alt="Visa" height="30">
+                    <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="Mastercard" height="30">
+                    <img src="https://img.icons8.com/color/48/000000/paypal.png" alt="PayPal" height="30">
+                    <img src="https://img.icons8.com/color/48/000000/american-express.png" alt="American Express" height="30">
+                </div>
+            </div>
         </div>
     </footer>
 
@@ -237,3 +297,4 @@
 </body>
 
 </html>
+
