--- a/ayuda.html
+++ b/ayuda.html
@@ -192,7 +192,7 @@
                     <img src="https://img.icons8.com/color/48/000000/visa.png" alt="Visa" height="30">
                     <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="Mastercard" height="30">
                     <img src="https://img.icons8.com/color/48/000000/paypal.png" alt="PayPal" height="30">
-                    <img src="https://img.icons8.com/color/48/000000/american-express.png" alt="American Express" height="30">
+                    <img src="https://cdn-icons-png.flaticon.com/256/825/825539.png" height="30">
                 </div>
             </div>
         </div>
@@ -297,4 +297,5 @@
 </body>
 
 </html>
+
 
