--- a/ayuda.html
+++ b/ayuda.html
@@ -139,8 +139,8 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>CONTACTO GAMENEXUS</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="bi bi-geo-alt-fill me-2"></i>Avenida Digital 123, Lima, Perú</li>
-                        <li class="mb-2"><i class="bi bi-telephone-fill me-2"></i>+51 987 654 321</li>
+                        <li class="mb-2"><i class="bi bi-geo-alt-fill me-2"></i>Av.Giralez, Huancayo, Perú</li>
+                        <li class="mb-2"><i class="bi bi-telephone-fill me-2"></i>+51 9xx xxx xxx</li>
                         <li class="mb-2"><i class="bi bi-envelope-fill me-2"></i>soporte@gamenexus.com</li>
                     </ul>
                     <div class="social-icons mt-3">
@@ -297,5 +297,6 @@
 </body>
 
 </html>
+
 
 
