--- a/carrito.html
+++ b/carrito.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
-    <!-- Reutilizamos el mismo Header para un diseño consistente -->
     <header>
+        <!-- Pega aquí el mismo <header> de tu index.html para mantener la consistencia -->
         <nav class="navbar navbar-expand-lg bg-dark border-bottom border-secondary">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold fs-4" href="index.html">GameNexus</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarContent">
@@ -31,49 +30,42 @@
                 </div>
                 <div class="d-flex align-items-center">
                     <div class="nav-item dropdown user-dropdown me-3"><!-- ... --></div>
-                    <a href="carrito.html" class="nav-link text-white fs-4"><i class="bi bi-cart-fill"></i></a>
-                    <!-- Carrito activo -->
+                    <a href="carrito.html" class="nav-link text-white fs-4 position-relative">
+                        <i class="bi bi-cart-fill"></i> <!-- Icono del carrito lleno -->
+                        <span id="carrito-contador" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">
+                            0
+                        </span>
+                    </a>
                 </div>
             </div>
         </nav>
-        <div class="bg-dark p-3 d-lg-none">
-            <form class="d-flex" role="search"><!-- ... --></form>
-        </div>
+        <div class="bg-dark p-3 d-lg-none"><form class="d-flex" role="search"><!-- ... --></form></div>
     </header>
 
     <main class="container my-5">
         <h1 class="section-title"><span>Tu Carrito de Compras</span></h1>
 
-        <div class="row">
+        <div class="row g-4">
             <!-- Columna de los productos del carrito -->
-            <div class="col-lg-8">
-                <div id="carrito-container">
-                    <!-- Los productos se insertarán aquí con JavaScript -->
-                </div>
-                <!-- Mensaje de carrito vacío -->
-                <div id="carrito-vacio" class="text-center p-5 bg-dark-subtle rounded-3 d-none">
-                    <i class="bi bi-cart-x fs-1"></i>
-                    <h3 class="mt-3">Tu carrito está vacío</h3>
-                    <p>Aún no has añadido ningún juego. ¡Explora nuestro catálogo!</p>
-                    <a href="index.html" class="btn btn-danger mt-2">Volver a la tienda</a>
-                </div>
+            <div class="col-lg-8" id="carrito-container">
+                <!-- Los productos se insertarán aquí con JavaScript -->
             </div>
 
             <!-- Columna del resumen de la compra -->
-            <div class="col-lg-4" id="resumen-compra">
-                <div class="card">
+            <div class="col-lg-4" id="resumen-compra-container">
+                <div class="card resumen-card">
                     <div class="card-body">
                         <h5 class="card-title fs-4 mb-3">Resumen del Pedido</h5>
-                        <div class="d-flex justify-content-between mb-2">
+                        <div class="d-flex justify-content-between mb-2 text-muted">
                             <span>Subtotal:</span>
                             <span id="subtotal-precio">S/ 0.00</span>
                         </div>
-                        <div class="d-flex justify-content-between mb-2">
+                        <div class="d-flex justify-content-between mb-3 text-muted">
                             <span>Descuentos:</span>
                             <span>- S/ 0.00</span>
                         </div>
                         <hr>
-                        <div class="d-flex justify-content-between fw-bold fs-5">
+                        <div class="d-flex justify-content-between fw-bold fs-5 mt-3">
                             <span>Total:</span>
                             <span id="total-precio">S/ 0.00</span>
                         </div>
@@ -84,13 +76,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- Mensaje de carrito vacío -->
+        <div id="carrito-vacio" class="text-center p-5 bg-dark-subtle rounded-3 d-none">
+            <i class="bi bi-cart-x display-1 text-muted"></i>
+            <h3 class="mt-4">Tu carrito está vacío</h3>
+            <p class="text-muted">Parece que aún no has añadido ningún juego a tu carrito.</p>
+            <a href="index.html" class="btn btn-danger btn-lg mt-3">Volver a la tienda</a>
+        </div>
     </main>
 
-    <!-- Reutilizamos el mismo Footer -->
-    <footer class="site-footer mt-5"><!-- ... (Tu footer completo va aquí) ... --></footer>
-
+    <footer class="site-footer mt-5"><!-- Pega aquí el mismo <footer> de tu index.html --></footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="carrito.js"></script> <!-- Script específico para esta página -->
 </body>
-
 </html>
