--- a/carrito.html
+++ b/carrito.html
@@ -31,10 +31,8 @@
                 <div class="d-flex align-items-center">
                     <div class="nav-item dropdown user-dropdown me-3"><!-- ... --></div>
                     <a href="carrito.html" class="nav-link text-white fs-4 position-relative">
-                        <i class="bi bi-cart-fill"></i> <!-- Icono del carrito lleno -->
-                        <span id="carrito-contador" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">
-                            0
-                        </span>
+                        <i class="bi bi-cart-fill"></i>
+                        <span id="carrito-contador" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">0</span>
                     </a>
                 </div>
             </div>
@@ -92,3 +90,4 @@
     <script src="carrito.js"></script> <!-- Script específico para esta página -->
 </body>
 </html>
+
